<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">madhur_s_application1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_love">Love</string>
    <string name="lbl_obes_n">OBES?N</string>
    <string name="msg_brighten_your_d">Brighten your day with  Music!</string>
    <string name="lbl_arijit_singh">Arijit Singh</string>
    <string name="lbl_15min_ago">15min ago</string>
    <string name="lbl_more_playlists">More Playlists</string>
    <string name="lbl_40_songs">40 songs</string>
    <string name="lbl_email_address">Email address</string>
    <string name="lbl_60_songs">60 songs</string>
    <string name="lbl_chill_song">Chill Song</string>
    <string name="lbl_30_songs">30 songs</string>
    <string name="lbl_home">Home</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_accounts_info">Accounts Info</string>
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_calm">Calm</string>
    <string name="lbl_happy">Happy</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_jessie">Jessie</string>
    <string name="lbl_101_songs">101 songs</string>
    <string name="lbl_see_all">See All ?</string>
    <string name="lbl_add_account">Add account</string>
    <string name="msg_stay_on_top_of">Stay on top of your Music with us.</string>
    <string name="msg_welcome_jessie">Welcome, Jessie.</string>
    <string name="lbl_energetic">Energetic</string>
    <string name="lbl_38_songs">38 songs</string>
    <string name="lbl_mike_panther">Mike Panther</string>
    <string name="msg_songs_kesariya">Songs- Kesariya(Bramhastra)</string>
    <string name="msg_create_an_accou">Create an account</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_23_songs">23 songs</string>
    <string name="lbl_sad">Sad</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_start_typing_to">Start typing to search</string>
    <string name="msg_beyonce_launch">Beyonce\u2019 Launched a new song. Check it out now</string>
    <string name="msg_new_mood_just_d">New mood just dropped Explore now</string>
    <string name="lbl_current_song">Current Song</string>
    <string name="msg_songs_jannatein">Songs-Jannatein Kahan</string>
    <string name="lbl_search">Search</string>
    <string name="msg_so_tell_me_plea">"So tell me please
So tell me please
Do I feel your touch in front of my rack
Kiss my lips
You wrap your hands between my legs
You come to please
Love condemned
Don't you know my love is with you?
(So I was thinking)
(What's it gonna be?)
(You know I was thinking"</string>
    <string name="msg_midnight_clock">Midnight Clock (feat. BOSCO)</string>
    <string name="lbl_fear">Fear</string>
    <string name="lbl_jiosaavn">JioSaavn</string>
    <string name="lbl_spotify">Spotify</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_gaana">Gaana</string>
    <string name="lbl_lyrics">Lyrics</string>
    <string name="lbl_3min_ago">3min ago</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_64_songs">64 songs</string>
    <string name="lbl_top_artists">Top Artists</string>
    <string name="lbl_motivation">Motivation</string>
    <string name="lbl_notification">Notification</string>
    <string name="msg_most_listened_m">Most Listened Mood</string>
    <string name="lbl_kk">KK</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_settings">Settings</string>
    <string name="msg_placeholder_tex">Placeholder text</string>
    <string name="lbl_surprise">Surprise</string>
    <string name="lbl_temper">Temper</string>
    <string name="lbl_56_songs">56 songs</string>
    <string name="msg_song_artist_or">Song,Artist or Mood</string>
    <string name="lbl_account">Account</string>
    <string name="msg_get_ready_to_im">Get ready to immersify yourself</string>
    <string name="lbl_full_name">Full name</string>
    <string name="lbl_30secs_ago">30secs ago</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
