<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="createAccountVM" type="com.madhursapplication.app.modules.createaccount.data.viewmodel.CreateAccountVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_316pxv"
        android:layout_marginEnd="@dimen/_32pxh"
        android:layout_marginStart="@dimen/_29pxh"
        android:layout_marginTop="@dimen/_27pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearCreateaccount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_6pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtPageTitle"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{createAccountVM.createAccountModel.txtPageTitle}"
                    style="@style/txtDMSansbold34" tools:text="@string/msg_create_an_accou"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtPageTitleOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_7pxh"
                    android:singleLine="true"
                    android:text="@{createAccountVM.createAccountModel.txtPageTitleOne}"
                    style="@style/txtSFProTextsemibold17_1" tools:text="@string/msg_get_ready_to_im"/>
                <FrameLayout android:id="@+id/frameStackpagetitleTwo"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_83pxv" android:layout_width="@dimen/_343pxh">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPageTitleTwo"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginEnd="@dimen/_25pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{createAccountVM.createAccountModel.txtPageTitleTwo}"
                        style="@style/txtSFProTextregular17" tools:text="@string/lbl_full_name"/>
                    <View
                        android:background="@drawable/rectangle_border_gray_600_radius_20"
                        android:id="@+id/viewRectangleTwo"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_60pxv" android:layout_width="@dimen/_343pxh"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackpagetitleThree"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_343pxh">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPageTitleThree"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginEnd="@dimen/_25pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{createAccountVM.createAccountModel.txtPageTitleThree}"
                        style="@style/txtSFProTextregular17" tools:text="@string/lbl_email_address"/>
                    <View
                        android:background="@drawable/rectangle_border_gray_600_radius_20"
                        android:id="@+id/viewRectangleThree"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_60pxv" android:layout_width="@dimen/_343pxh"/>
                </FrameLayout>
                <EditText
                    android:background="@drawable/rectangle_border_gray_600_radius_20"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:id="@+id/etGroupSix"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_25pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@={createAccountVM.createAccountModel.etGroupSixValue}"
                    android:textColorHint="@color/gray_600"
                    style="@style/etRoundedOutline" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCreateAccount"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_create_account"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_create_account"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{createAccountVM.createAccountModel.txtConfirmation}"
                    style="@style/txtSFProTextsemibold17_2" tools:text="@string/msg_already_have_an"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
