<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homepageContainerVM" type="com.madhursapplication.app.modules.homepagecontainer.data.viewmodel.HomepageContainerVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnmenu"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_19pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <FrameLayout android:id="@+id/fragmentContainer"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent"/>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_100">
            <LinearLayout android:id="@+id/linearRowhomeOne"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearColumnhomeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageHomeOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_width="@dimen/_19pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtHomeTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_4pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.02"
                        android:singleLine="true"
                        android:text="@{homepageContainerVM.homepageContainerModel.txtHomeTwo}"
                        style="@style/txtCatamaranmedium12" tools:text="@string/lbl_home"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnsearchTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageSearchTwo"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_19pxh"
                        android:layout_width="@dimen/_18pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_search"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtSongOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.02"
                        android:singleLine="true"
                        android:text="@{homepageContainerVM.homepageContainerModel.txtSongOne}"
                        style="@style/txtCatamaranmedium12_1" tools:text="@string/lbl_song"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnmusicOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageMusicOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_music"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_music"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtLyricsOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.02"
                        android:singleLine="true"
                        android:text="@{homepageContainerVM.homepageContainerModel.txtLyricsOne}"
                        style="@style/txtCatamaranmedium12_1" tools:text="@string/lbl_lyrics"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnsearchThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageSearchThree"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_search_black_900"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_search_black_900"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtProfile"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.02"
                        android:singleLine="true"
                        android:text="@{homepageContainerVM.homepageContainerModel.txtProfile}"
                        style="@style/txtCatamaranmedium12_1" tools:text="@string/lbl_profile"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
